--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             </div>
                             <div>
                                 <div class="flex justify-between mb-2">
-                                    <span>UI/UX Design</span>
+                                    <span>Android Development</span>
                                     <span>90%</span>
                                 </div>
                                 <div class="bg-gray-700 rounded-full h-2">
@@ -322,8 +322,11 @@
                         <h3 class="text-xl font-semibold mb-2">E-commerce Platform</h3>
                         <p class="text-gray-300 mb-4">Modern e-commerce solution with advanced features and seamless user experience.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-purple-600/20 text-purple-400 px-3 py-1 rounded-full text-sm">React</span>
+                            <span class="bg-purple-600/20 text-purple-400 px-3 py-1 rounded-full text-sm">React.js</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Angular</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Express.js</span>
+
                         </div>
                         <button class="text-purple-400 hover:text-purple-300 font-semibold">View Project →</button>
                     </div>
@@ -333,11 +336,13 @@
                         <div class="text-6xl">📱</div>
                     </div>
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Mobile App Design</h3>
-                        <p class="text-gray-300 mb-4">Intuitive mobile app design with focus on user experience and modern aesthetics.</p>
+                        <h3 class="text-xl font-semibold mb-2">Mobile App Development</h3>
+                        <p class="text-gray-300 mb-4">Intuitive mobile app development with focus on user experience and modern aesthetics.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-green-600/20 text-green-400 px-3 py-1 rounded-full text-sm">Figma</span>
-                            <span class="bg-teal-600/20 text-teal-400 px-3 py-1 rounded-full text-sm">UI/UX</span>
+                            <span class="bg-green-600/20 text-green-400 px-3 py-1 rounded-full text-sm">React Native</span>
+                            <span class="bg-teal-600/20 text-teal-400 px-3 py-1 rounded-full text-sm">Angular Ionic</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Nest.js</span>
                         </div>
                         <button class="text-purple-400 hover:text-purple-300 font-semibold">View Project →</button>
                     </div>
@@ -350,8 +355,9 @@
                         <h3 class="text-xl font-semibold mb-2">Corporate Website</h3>
                         <p class="text-gray-300 mb-4">Professional corporate website with modern design and optimized performance.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
-                            <span class="bg-orange-600/20 text-orange-400 px-3 py-1 rounded-full text-sm">WordPress</span>
-                            <span class="bg-red-600/20 text-red-400 px-3 py-1 rounded-full text-sm">SEO</span>
+                            <span class="bg-orange-600/20 text-orange-400 px-3 py-1 rounded-full text-sm">Angular</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">React.js</span>
+                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Express.js</span>
                         </div>
                         <button class="text-purple-400 hover:text-purple-300 font-semibold">View Project →</button>
                     </div>
@@ -381,7 +387,7 @@
                             </div>
                             <div>
                                 <div class="font-semibold">Email</div>
-                                <div class="text-gray-300">alex@example.com</div>
+                                <div class="text-gray-300">akstech16@gmail.com</div>
                             </div>
                         </div>
                         <div class="flex items-center space-x-4">
@@ -392,7 +398,7 @@
                             </div>
                             <div>
                                 <div class="font-semibold">Phone</div>
-                                <div class="text-gray-300">+1 (555) 123-4567</div>
+                                <div class="text-gray-300">+91 7033025503</div>
                             </div>
                         </div>
                         <div class="flex items-center space-x-4">
@@ -404,7 +410,7 @@
                             </div>
                             <div>
                                 <div class="font-semibold">Location</div>
-                                <div class="text-gray-300">New York, NY</div>
+                                <div class="text-gray-300">New Town, Kolkata, West Bengal</div>
                             </div>
                         </div>
                     </div>
