--- a/index.html
+++ b/index.html
@@ -273,19 +273,31 @@
                     </ul>
                 </div>
                 <div class="bg-gray-800 p-8 rounded-2xl card-hover fade-in">
-                    <div class="w-16 h-16 bg-gradient-to-r from-purple-600 to-blue-600 rounded-2xl flex items-center justify-center mb-6">
-                        <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zM21 5a2 2 0 00-2-2h-4a2 2 0 00-2 2v12a4 4 0 004 4h4a2 2 0 002-2V5z"></path>
-                        </svg>
-                    </div>
-                    <h3 class="text-2xl font-semibold mb-4">UI/UX Design</h3>
-                    <p class="text-gray-300 mb-6">Beautiful, intuitive designs that enhance user experience and drive conversions.</p>
-                    <ul class="text-gray-400 space-y-2">
-                        <li>• User Research</li>
-                        <li>• Wireframing</li>
-                        <li>• Prototyping</li>
-                    </ul>
+                <!-- Icon -->
+                <div class="w-16 h-16 bg-gradient-to-r from-orange-500 to-pink-500 rounded-2xl flex items-center justify-center mb-6">
+                    <!-- Updated icon: HTML/CSS symbol -->
+                    <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M16 18l6-6-6-6M8 6l-6 6 6 6" />
+                    </svg>
                 </div>
+
+                <!-- Title -->
+                <h3 class="text-2xl font-semibold mb-4">HTML & CSS Development</h3>
+
+                <!-- Description -->
+                <p class="text-gray-300 mb-6">
+                    Clean, responsive, and accessible web interfaces crafted with semantic HTML and modern CSS techniques.
+                </p>
+
+                <!-- Skills List -->
+                <ul class="text-gray-400 space-y-2">
+                    <li>• Semantic HTML</li>
+                    <li>• Tailwind / Flexbox / Grid</li>
+                    <li>• Mobile-first Responsive Design</li>
+                </ul>
+                </div>
+
                 <div class="bg-gray-800 p-8 rounded-2xl card-hover fade-in">
                     <div class="w-16 h-16 bg-gradient-to-r from-purple-600 to-blue-600 rounded-2xl flex items-center justify-center mb-6">
                         <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -324,7 +336,7 @@
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-purple-600/20 text-purple-400 px-3 py-1 rounded-full text-sm">React.js</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Angular</span>
-                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
+                           <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Express.js</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Nest.js</span>
                             
@@ -364,7 +376,8 @@
                         <p class="text-gray-300 mb-4">Professional corporate website with modern design and optimized performance.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-orange-600/20 text-orange-400 px-3 py-1 rounded-full text-sm">Angular</span>
-                            <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">React.js</span>
+                            <span class="bg-orange-600/20 text-orange-400 px-3 py-1 rounded-full text-sm">React.js</span>
+
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Node.js</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Express.js</span>
                             <span class="bg-blue-600/20 text-blue-400 px-3 py-1 rounded-full text-sm">Nest.js</span>
