--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
                             </div>
                             <div>
                                 <div class="flex justify-between mb-2">
+                                    <span>IOS Development</span>
+                                    <span>80%</span>
+                                </div>
+                                <div class="bg-gray-700 rounded-full h-2">
+                                    <div class="skill-bar bg-gradient-to-r from-purple-600 to-blue-600 h-2 rounded-full" style="width: 90%"></div>
+                                </div>
+                            </div>
+                            <div>
+                                <div class="flex justify-between mb-2">
                                     <span>Backend Development</span>
                                     <span>85%</span>
                                 </div>
