--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <nav class="fixed top-0 w-full bg-gray-900/95 backdrop-blur-sm z-50 border-b border-gray-800">
     <div class="max-w-6xl mx-auto px-6 py-4">
         <div class="flex justify-between items-center">
-            <div class="text-2xl font-bold gradient-text">AJ</div>
+            <div class="text-2xl font-bold gradient-text">Arun Sarkar</div>
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="nav-link hover:text-purple-400">Home</a>
                 <a href="#about" class="nav-link hover:text-purple-400">About</a>
