--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
     <section id="services" class="py-20 px-6 bg-gray-800/50">
         <div class="max-w-6xl mx-auto">
             <div class="text-center mb-16 fade-in">
-                <h2 class="text-4xl font-bold mb-4">My <span class="gradient-text">Services</span></h2>
+                <h2 class="text-4xl font-bold mb-4">My <span class="gradient-text">Experties</span></h2>
                 <p class="text-gray-300 max-w-2xl mx-auto">
                     I offer comprehensive digital solutions to help your business thrive online
                 </p>
