--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
                         </div>
                     </div>
                 </div>
-                <form action="https://formsubmit.co/akstech16@gmail.com.com" method="POST" class="space-y-6">
+                <form action="https://formsubmit.co/akstech16@gmail.com" method="POST" class="space-y-6">
                     <div>
                         <label class="block text-sm font-medium mb-2">Name</label>
                         <input type="text" name="name" required
