--- a/index.html
+++ b/index.html
@@ -563,7 +563,9 @@
                     </div>
 
                     <!-- Optional redirect after submit -->
-                    <input type="hidden" name="redirect" value="https://yourdomain.com/thank-you.html">
+<!--                     <input type="hidden" name="redirect" value="https://yourdomain.com/thank-you.html"> -->
+                    <input type="hidden" name="_next" value="https://sarkarArun00.github.io/thank-you.html">
+
 
                     <button type="submit"
                         class="w-full bg-gradient-to-r from-purple-600 to-blue-600 hover:from-purple-700 hover:to-blue-700 px-8 py-3 rounded-lg font-semibold transition-all duration-300 transform hover:scale-105">
