--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
                     <!-- Optional redirect after submit -->
 <!--                     <input type="hidden" name="redirect" value="https://yourdomain.com/thank-you.html"> -->
                     <input type="hidden" name="_next" value="https://sarkarArun00.github.io/thank-you.html">
+                    <input type="text" name="honeypot" style="display:none" tabindex="-1" autocomplete="off">
 
 
                     <button type="submit"
