--- a/index.html
+++ b/index.html
@@ -506,9 +506,11 @@
                                 </svg>
                             </div>
                             <div>
-                                <div class="font-semibold">Email</div>
-                                <div class="text-gray-300">akstech16@gmail.com</div>
+                            <div class="font-semibold">Email</div>
+                            <div class="text-gray-300">
+                                <a href="mailto:akstech16@gmail.com" class="hover:underline">akstech16@gmail.com</a>
                             </div>
+                        </div>
                         </div>
                         <div class="flex items-center space-x-4">
                             <div
@@ -521,7 +523,9 @@
                             </div>
                             <div>
                                 <div class="font-semibold">Phone</div>
-                                <div class="text-gray-300">+91 7033025503</div>
+                                <div class="text-gray-300">
+                                    <a href="tel:+917033025503" class="hover:underline">+91 7033025503</a>
+                                </div>
                             </div>
                         </div>
                         <div class="flex items-center space-x-4">
@@ -563,7 +567,6 @@
                     </div>
 
                     <!-- Optional redirect after submit -->
-<!--                     <input type="hidden" name="redirect" value="https://yourdomain.com/thank-you.html"> -->
                     <input type="hidden" name="_next" value="https://sarkarArun00.github.io/thank-you.html">
                     <input type="text" name="honeypot" style="display:none" tabindex="-1" autocomplete="off">
 
