--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                     </svg>
                 </a>
 
-                <a href="https://in.linkedin.com/in/arun-sarkar-7875a61a3?trk=people-guest_people_search-card"
+                <a href="www.linkedin.com/in/arun-sarkar-7875a61a3"
                     class="text-gray-400 hover:text-purple-400 transition-colors">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                         <path
